--- a/TechJobsPersistent/Views/Home/AddJob.cshtml
+++ b/TechJobsPersistent/Views/Home/AddJob.cshtml
@@ -1,4 +1,5 @@
-﻿<h1>Add a Job</h1>
+﻿@model TechJobsPersistent.ViewModels.AddJobViewModel;
+<h1>Add a Job</h1>
 
 <form asp-controller="Home" asp-action="ProcessAddJobForm" method="post">
     <div class="form-group">
@@ -7,6 +8,12 @@
         <span></span>
     </div>
 
+    <div class="form-group">
+        <label asp-for="EmployerId">Employers</label>
+        <select asp-for="EmployerId" asp-items="Model.Employer"></select>
+    </div>
     <input type="submit" value="Add Job" />
+    <p><a asp-controller="Employer" asp-action="Add">Add Employer</a></p>
+
 </form>
 
