--- a/TechJobsPersistent/Views/Employer/Add.cshtml
+++ b/TechJobsPersistent/Views/Employer/Add.cshtml
@@ -1,13 +1,16 @@
-﻿<h1>Add New Employer</h1>
+﻿@model TechJobsPersistent.ViewModels.AddEmployerViewModel;
+<h1>Add New Employer</h1>
 
 <form asp-controller="Employer" asp-action="ProcessAddEmployerForm" method="post">
     <div class="form-group">
-        <label>Employer Name</label>
+        <label asp-for="Name"></label>
         <input />
+        <span asp-validation-for="Name"></span>
     </div>
     <div class="form-group">
-        <label>Employer Location</label>
+        <label asp-for="Location"></label>
         <input />
+        <span asp-validation-for="Location"></span>
     </div>
     <input type="submit" value="Submit" />
 </form>
