--- a/TechJobsPersistent/Views/Employer/Add.cshtml
+++ b/TechJobsPersistent/Views/Employer/Add.cshtml
@@ -4,12 +4,12 @@
 <form asp-controller="Employer" asp-action="ProcessAddEmployerForm" method="post">
     <div class="form-group">
         <label asp-for="Name"></label>
-        <input />
+        <input asp-for="Name"/>
         <span asp-validation-for="Name"></span>
     </div>
     <div class="form-group">
         <label asp-for="Location"></label>
-        <input />
+        <input asp-for="Location"/>
         <span asp-validation-for="Location"></span>
     </div>
     <input type="submit" value="Submit" />
